# FormsCrudProject

./: README.md  pyproject.toml
Crud/: manage.py
Crud/Crud/: asgi.py  settings.py  urls.py  wsgi.py
Crud/forms_crud/: apps.py  forms.py  models.py  urls.py  views.py
Crud/forms_crud/migrations/: 0001_initial.py
Crud/forms_crud/views/: create_view.py  delete_view.py  index_view.py  update_view.py
Crud/static/: styles.css
Crud/templates/: index.html  retrieve.html
